fix: Correct z-index on fab

--- a/webapp/src/app/shared/components/action-button/action-button.component.scss
+++ b/webapp/src/app/shared/components/action-button/action-button.component.scss
@@ -2,4 +2,5 @@
   bottom: 27px;
   right: 27px;
   position: fixed;
+  z-index: 999;
 }
